Modify cognito redirect url

--- a/public/views/templates/user-login.view.client.html
+++ b/public/views/templates/user-login.view.client.html
@@ -1,5 +1,13 @@
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="ad-navbar-text navbar-inner">
+			<b class="sup-navbar-text">File Service App</b>
+		</div>
+	</div>
+</nav>
+
 <div>
-	This is the Login Page <a
-		href="https://mycloudprojectsupriyameduri.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=2g4s4eu7av0f2qtl48ubc4ob52&redirect_uri=http://localhost:3000/login"
+	<a
+		href="https://mycloudprojectsupriyameduri.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=2g4s4eu7av0f2qtl48ubc4ob52&redirect_uri=https://myclouprojectsupriyameduri.com/login"
 		class="btn btn-primary btn-block">Click here to SignUp/Login!</a>
 </div>
